# ecl

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README-ecl.md  README-fabryk.md  README.md
.github/workflows/: cicd.yml
assets/ai/: UPDATE-ARCH.md
assets/images/logo/drafts/: v1.afphoto
assets/papers/: paper2_critique.docx  paper3_response.docx  pipeline-methodology-analysis.md  pipeline-paper.docx
crates/design/dev/: 0012-fabryk-extraction-session-bootstrap-phases-1-7.md  0013-lancedb-integration-guide-for-rust-mcp-servers.md
crates/design/dev/concept-cards/: 0002-a-guide-for-parallel-concept-card-extraction-v3.md  0003-howto-concept-card-extraction-with-claude-code.md
crates/design/dev/ecl/: 0001-ecl-pipeline-redesign-2026.02.13-session-bootstrap.md  0002-pipeline-crate-deep-analysis-claude-code-prompts.md  0003-deep-analysis-dagrs.md  0004-deep-analysis-erio-workflow.md  0005-deep-analysis-oxigdal-workflow.md  0006-deep-analysis-dagx.md  0007-deep-analysis-dagga.md  0008-deep-analysis-rettle.md  0009-pipeline-crate-synthesis.md  0010-ecl-pipeline-runner-trait-based-design-sketch.md  0011-pipeline-crate-survey-analysis-synthesis.md  0025-zapier-webhook-adapter-implementation-plan.md  0026-phase-1-detailed-implementation-plan-make-affinity-work.md  0027-phase-2-detailed-implementation-plan-make-giant-eagle-work.md  0029-phase-4-detailed-implementation-plan-full-parity.md
crates/design/dev/fabryk/: 0001-cc-prompt-fabryk-1.md  (+7 more)
crates/design/docs/: index.md
crates/ecl/: Cargo.toml  README.md
crates/ecl-adapter-fs/: Cargo.toml
crates/ecl-adapter-fs/src/: error.rs  lib.rs
crates/ecl-adapter-gcs/: Cargo.toml
crates/ecl-adapter-gcs/src/: auth.rs  error.rs  lib.rs  types.rs
crates/ecl-adapter-gdrive/: Cargo.toml
crates/ecl-adapter-gdrive/src/: auth.rs  error.rs  lib.rs  types.rs
crates/ecl-adapter-sftp/: Cargo.toml
crates/ecl-adapter-sftp/src/: lib.rs
crates/ecl-adapter-slack/: Cargo.toml
crates/ecl-adapter-slack/src/: error.rs  lib.rs
crates/ecl-adapter-zapier/: Cargo.toml
crates/ecl-adapter-zapier/src/: error.rs  lib.rs  server.rs
crates/ecl-cli/: Cargo.toml
crates/ecl-core/: Cargo.toml
crates/ecl-core/src/: lib.rs
crates/ecl-pipeline/: Cargo.toml
crates/ecl-pipeline-spec/src/: lib.rs  lifecycle.rs  source.rs  stage.rs  validation.rs
crates/ecl-pipeline-state/: Cargo.toml
crates/ecl-pipeline-topo/: Cargo.toml
crates/ecl-pipeline-topo/src/: error.rs  lib.rs  resolve.rs  resource_graph.rs  schedule.rs  traits.rs
crates/ecl-pipeline/src/: batch.rs  error.rs  lib.rs  lifecycle.rs  registry.rs  runner.rs
crates/ecl-pipeline/tests/: integration_tests.rs
crates/ecl-pipeline/tests/fixtures/: affinity_sample.csv
crates/ecl-pipeline/tests/fixtures/giant_eagle/: items.csv  products.csv  stores.csv  tenders.csv  transactions.csv
crates/ecl-pipeline/tests/integration/: affinity_e2e.rs  checkpoint_resume.rs  error_handling.rs  full_pipeline.rs  giant_eagle_e2e.rs  incrementality.rs  mod.rs
crates/ecl-secrets/: Cargo.toml
crates/ecl-secrets/src/: env.rs  file.rs  lib.rs
crates/ecl-sink-gcs/: Cargo.toml
crates/ecl-sink-gcs/src/: lib.rs
crates/ecl-sink-kafka/: Cargo.toml
crates/ecl-sink-kafka/src/: avro.rs  lib.rs  registry.rs
crates/ecl-stages/: Cargo.toml
crates/ecl-stages/src/: aggregate.rs  assemble.rs  csv_parse.rs  date_parse.rs  decompress.rs  emit.rs  extract.rs  field_map.rs  filter.rs  join.rs  lib.rs  lookup.rs  normalize.rs  timezone.rs  validate.rs
crates/ecl-steps/: Cargo.toml
crates/ecl-workflows/: Cargo.toml
crates/fabryk/: Cargo.toml  README.md
crates/fabryk-acl/: Cargo.toml  README.md
crates/fabryk-acl/src/: lib.rs
crates/fabryk-api/: Cargo.toml
crates/fabryk-auth-google/: Cargo.toml
crates/fabryk-auth-google/src/: lib.rs
crates/fabryk-auth-mcp/src/: lib.rs
crates/fabryk-auth/src/: lib.rs
crates/fabryk-cli/: Cargo.toml  README.md
crates/fabryk-cli/src/: app.rs  cli.rs  config.rs  config_handlers.rs  config_loader.rs  config_sections.rs  config_utils.rs  graph_handlers.rs  lib.rs
crates/fabryk-client/: Cargo.toml
crates/fabryk-content/: Cargo.toml  README.md
crates/fabryk-content/src/: lib.rs
crates/fabryk-core/: Cargo.toml  README.md
crates/fabryk-core/src/: error.rs  lib.rs  service.rs  state.rs  traits.rs
crates/fabryk-core/src/util/: files.rs  ids.rs  mod.rs  paths.rs  resolver.rs
crates/fabryk-fts/: Cargo.toml  README.md
crates/fabryk-fts/src/: builder.rs  document.rs  freshness.rs  lib.rs  query.rs  schema.rs  stopwords.rs  tantivy_search.rs
crates/fabryk-graph/: Cargo.toml  README.md
crates/fabryk-graph/src/: algorithms.rs  builder.rs  extractor.rs  lib.rs  persistence.rs  query.rs  stats.rs  types.rs  validation.rs
crates/fabryk-mcp/: Cargo.toml  README.md
crates/fabryk-mcp-content/: Cargo.toml  README.md
crates/fabryk-mcp-content/src/: lib.rs  tools.rs  traits.rs
crates/fabryk-mcp-core/: Cargo.toml
crates/fabryk-mcp-core/src/: discoverable.rs  guidance.rs  lib.rs  notifier.rs  resource.rs  server.rs
crates/fabryk-mcp-fts/: Cargo.toml  README.md
crates/fabryk-mcp-fts/src/: lib.rs  tools.rs
crates/fabryk-mcp-graph/: Cargo.toml  README.md
crates/fabryk-mcp-graph/src/: lib.rs  tools.rs
crates/fabryk-mcp-semantic/: Cargo.toml
crates/fabryk-mcp-semantic/src/: lib.rs  tools.rs
crates/fabryk-mcp/src/: discoverable.rs  lib.rs  registry.rs  server.rs  service_registry.rs
crates/fabryk-query/: Cargo.toml
crates/fabryk-storage/: Cargo.toml
crates/fabryk-vector/: Cargo.toml
crates/fabryk-vector/src/: backend.rs  builder.rs  embedding.rs  extractor.rs  fastembed.rs  hybrid.rs  lancedb.rs  lib.rs  persistence.rs  types.rs
crates/fabryk/src/: lib.rs
crates/textrynum-util/: Cargo.toml
crates/textrynum-util/src/: cli.rs  crate_info.rs  editor.rs  error.rs  main.rs  output.rs  workspace.rs
docs/: mcp-async-startup-howto.md  mcp-health-howto.md
docs/arch/: architecture.yaml
docs/howtos/: building-a-fabryk-mcp-server.md  mcp-configuration.md  mcp-health.md
scripts/: update-arch.sh
workbench/: BOOTSTRAP.md  PROMPTS.md
(+30 files in other folders)
