[package]
name = "ecl-adapter-sftp"
version.workspace = true
edition.workspace = true

[lints.clippy]
unwrap_used = "deny"

# Note: "deny" instead of "forbid" so tests can use unsafe for set_var/remove_var
[lints.rust]
unsafe_code = "deny"

[dependencies]
ecl-pipeline-topo = { path = "../ecl-pipeline-topo" }
ecl-pipeline-spec = { path = "../ecl-pipeline-spec" }
ecl-pipeline-state = { path = "../ecl-pipeline-state" }
ecl-secrets = { path = "../ecl-secrets" }

# SSH/SFTP
russh = { workspace = true }
russh-sftp = { workspace = true }
russh-keys = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Pattern matching
glob = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & errors
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
