[package]
name = "fabryk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI framework for Fabryk-based applications"

[dependencies]
fabryk-core = { path = "../fabryk-core" }
fabryk-graph = { path = "../fabryk-graph" }
fabryk-content = { path = "../fabryk-content" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
