[package]
name = "fabryk-mcp-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Content and source MCP tools for Fabryk (ContentItemProvider, SourceProvider)"

[dependencies]
fabryk-core = { path = "../fabryk-core" }
fabryk-content = { path = "../fabryk-content" }
fabryk-mcp = { path = "../fabryk-mcp" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Schema
schemars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
