[package]
name = "fabryk-mcp-fts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Full-text search MCP tools for Fabryk"

[features]
default = []
fts-tantivy = ["fabryk-fts/fts-tantivy"]

[dependencies]
fabryk-core = { path = "../fabryk-core" }
fabryk-fts = { path = "../fabryk-fts" }
fabryk-mcp = { path = "../fabryk-mcp" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Schema
schemars = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
