[package]
name = "fabryk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Knowledge fabric for AI workflows - umbrella crate"

[dependencies]
fabryk-core = { version = "0.0.1", path = "../fabryk-core" }
fabryk-acl = { version = "0.0.1", path = "../fabryk-acl" }
fabryk-storage = { version = "0.0.1", path = "../fabryk-storage" }
fabryk-query = { version = "0.0.1", path = "../fabryk-query" }
fabryk-api = { version = "0.0.1", path = "../fabryk-api" }
fabryk-client = { version = "0.0.1", path = "../fabryk-client" }

[dev-dependencies]
proptest.workspace = true
